# de-orders-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cd.yml  security.yml  test.yml
configs/: base.yaml  dev.yaml  docker.yaml  prod.yaml
dags/: orders_pipeline.py
data/schemas/: order.json
docs/: architecture.md
mock_api/: orders.json
scripts/: check_repo_hygiene.py  scan_secrets.py
src/my_de_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/my_project/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/my_project/connectors/: kafka.py  mysql.py  postgres.py  rest_api.py  s3.py
src/my_project/extractors/: orders_api.py
src/my_project/lineage/: emitter.py
src/my_project/loaders/: warehouse.py
src/my_project/models/: order.py  pipeline.py
src/my_project/observability/: metrics.py
src/my_project/orchestration/: tasks.py
src/my_project/quality/: orders.py
src/my_project/transformers/: clean_orders.py
src/my_project/utils/: logger.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_extractor.py  test_quality.py  test_transformers.py
